<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:padding="@dimen/margin_8"
    android:visibility="gone"
    tools:visibility="visible">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="Token"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etAuthToken"
        style="@style/Theme.PostmanAndroidClient.InputField.Outlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2" />
</LinearLayout>