<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.makeRequest.body.BodyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/margin_8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Type"
            android:textSize="16sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/spinner_bg">

            <Spinner
                android:id="@+id/bodyTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_8" />
        </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvNoBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_8"
            android:gravity="center"
            android:padding="@dimen/margin_8"
            android:text="@string/no_body_info"
            android:textSize="18sp" />

        <io.rotlabs.postmanandroidclient.ui.makeRequest.addKeyValue.AddKeyValueLayout
            android:id="@+id/addKeyValueLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/etRawBodyBox"
            style="@style/Theme.PostmanAndroidClient.InputField.Outlined.NoHighlight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_8"
            android:gravity="top|start"
            android:singleLine="false"
            android:visibility="gone"
            tools:visibility="visible" />

    </FrameLayout>

</LinearLayout>